[gd_scene load_steps=16 format=3 uid="uid://cu4c0o3skged"]

[ext_resource type="Script" uid="uid://4uicyijsq4rb" path="res://scripts/tower_upgrade_menu.gd" id="1_8i6jl"]
[ext_resource type="Texture2D" uid="uid://ct2bqitajgi50" path="res://art/Tower_Context_Menu.png" id="2_buycl"]
[ext_resource type="Texture2D" uid="uid://cl6favg8bb0cy" path="res://art/TowerTargetingReticule.png" id="3_v0swp"]
[ext_resource type="Texture2D" uid="uid://boy4ifdxjplla" path="res://art/Upgrade_Tower_3.png" id="4_8i6jl"]
[ext_resource type="Texture2D" uid="uid://u6ur565pb65i" path="res://art/Destroy_Tower.png" id="5_8i6jl"]
[ext_resource type="Texture2D" uid="uid://dlvt57aaprfdt" path="res://art/Upgrade_Tower_6.png" id="5_buycl"]
[ext_resource type="Texture2D" uid="uid://cototqfj264ja" path="res://art/Upgrade_Tower_5.png" id="5_v0swp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkrlw"]
size = Vector2(65, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oke6i"]
atlas = ExtResource("3_v0swp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfr50"]
atlas = ExtResource("3_v0swp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2835"]
atlas = ExtResource("3_v0swp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqn6f"]
atlas = ExtResource("3_v0swp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cyqu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oke6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfr50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2835")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqn6f")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sdhg0"]
radius = 12.0

[sub_resource type="SpriteFrames" id="SpriteFrames_buycl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8i6jl")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_v0swp")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_buycl")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}]

[node name="UpgradeMenu" type="Node2D" node_paths=PackedStringArray("tower_highlight", "upgrade_button")]
script = ExtResource("1_8i6jl")
tower_highlight = NodePath("TowerHighlight")
upgrade_button = NodePath("UpgradeTower")

[node name="MenuRing" type="Sprite2D" parent="."]
texture = ExtResource("2_buycl")

[node name="CloseArea" type="Area2D" parent="."]

[node name="CloseArea" type="CollisionShape2D" parent="CloseArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_hkrlw")

[node name="TowerHighlight" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5cyqu")

[node name="UpgradeTower" type="Area2D" parent="."]
position = Vector2(20, -6)

[node name="ClickyCircle" type="CollisionShape2D" parent="UpgradeTower"]
position = Vector2(-20, -20)
shape = SubResource("CircleShape2D_sdhg0")

[node name="UpgradeIcon" type="AnimatedSprite2D" parent="UpgradeTower"]
position = Vector2(-20, -20)
sprite_frames = SubResource("SpriteFrames_buycl")
animation = &"5"

[node name="SellTower" type="Area2D" parent="."]
position = Vector2(-20, 46)

[node name="ClickyCircle" type="CollisionShape2D" parent="SellTower"]
position = Vector2(20, -20)
shape = SubResource("CircleShape2D_sdhg0")

[node name="SellIcon" type="Sprite2D" parent="SellTower"]
position = Vector2(20, -20)
texture = ExtResource("5_8i6jl")

[connection signal="input_event" from="CloseArea" to="." method="_on_close_area_input_event"]
[connection signal="input_event" from="UpgradeTower" to="." method="_on_upgrade_input_event"]
[connection signal="input_event" from="SellTower" to="." method="_on_sell_input_event"]
